# mcp-core-defense

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT  LICENSE  LICENSE.md  Makefile  PROMO.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: tests.yml
scripts/: mcp_audit.py
src/: __init__.py  pipeline.py  sdk_integration.py
src/auth/: __init__.py  mtls.py
src/detectors/: __init__.py  dci_checker.py  tdp_detector.py
src/policy_engine/: __init__.py  engine.py
src/sandbox/: __init__.py  sandbox.py
src/validators/: __init__.py  schema_validator.py
tests/: __init__.py  test_dci_checker.py  test_integration.py  test_mcp_audit.py  test_mtls.py  test_performance.py  test_pipeline.py  test_policy_engine.py  test_sandbox.py  test_schema_validator.py  test_sdk_integration.py  test_tdp_detector.py
